--- a/style.css
+++ b/style.css
@@ -21,26 +21,27 @@ header {
     text-align: center;
 }
 
-header h1 {
-    margin-bottom: 10px;
+header img {
+    max-width: 100%;
+    height: auto;
 }
 
-nav ul {
+header nav ul {
     list-style-type: none;
 }
 
-nav ul li {
+header nav ul li {
     display: inline;
     margin-right: 20px;
 }
 
-nav ul li a {
+header nav ul li a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
 }
 
-nav ul li a:hover {
+header nav ul li a:hover {
     text-decoration: underline;
 }
 
@@ -48,6 +49,12 @@ section {
     background-color: #fff;
     padding: 20px;
     margin: 20px;
+    text-align: center;
+}
+
+section img {
+    max-width: 100%;
+    height: auto;
 }
 
 footer {
