--- a/style.css
+++ b/style.css
@@ -21,27 +21,26 @@ header {
     text-align: center;
 }
 
-header img {
-    max-width: 100%;
-    height: auto;
+header h1 {
+    margin-bottom: 10px;
 }
 
-header nav ul {
+nav ul {
     list-style-type: none;
 }
 
-header nav ul li {
+nav ul li {
     display: inline;
     margin-right: 20px;
 }
 
-header nav ul li a {
+nav ul li a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
 }
 
-header nav ul li a:hover {
+nav ul li a:hover {
     text-decoration: underline;
 }
 
@@ -49,12 +48,6 @@ section {
     background-color: #fff;
     padding: 20px;
     margin: 20px;
-    text-align: center;
-}
-
-section img {
-    max-width: 100%;
-    height: auto;
 }
 
 footer {
@@ -66,3 +59,4 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
