--- a/style.css
+++ b/style.css
@@ -33,9 +33,9 @@ nav ul li {
     display:flex;
     margin-right: 20px;
 }
-#volei{
-    padding: 100px;
-    right: 100%;
+.volei{
+    padding: 0%;
+    right: 0%;
 }
 nav ul li a {
     color: #fff;
