--- a/style.css
+++ b/style.css
@@ -1,65 +1,26 @@
-/* Reset de Estilos */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* Estilos Globais */
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
-}
-
-header h1 {
-    margin-bottom: 10px;
-}
-
-nav ul {
-    list-style-type: none;
-}
-
-nav ul li {
-    display:flex;
-    margin-right: 20px;
-}
-.volei{
+	
+*{
+    margin: 0%;
     padding: 0%;
-    right: 0%;
 }
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
+body{
+    background: linear-gradient(to right, #000000, #3E065F, #700B97, #8E05C2);
 }
-
-nav ul li a:hover {
-    text-decoration: underline;
+h1{
+    color: aliceblue;
 }
-
-section {
-    background-color: #fff;
-    padding: 20px;
-    margin: 20px;
+p{
+    color: aliceblue;
 }
 
-footer {
-    background-color: #333;
-    color: #fff;
+.cabecalho{
+    background-color: #000000;
+    padding: 30px;
     text-align: center;
-    padding: 10px 0;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+    display: flex;
+   
 }
-
+.computador{
+    padding: 10px;
+    right: 50%;
+}
