--- a/style.css
+++ b/style.css
@@ -23,4 +23,15 @@ p{
 .computador{
     padding: 10px;
     right: 50%;
+.video{
+    position:relative;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.video iframe{
+width: 100%;
+height: 450px;
+border:none;
 }
